# trip-planner

./: .gitignore  note.md  pyproject.toml
backend/app/: config.py  server.py
backend/app/agents/: trip_planner_agent.py
backend/app/graph/: __init__.py  state.py  trip_planner_graph.py
backend/app/models/: schemas.py
backend/app/services/: llm_service.py  trip_service.py
backend/app/tools/: __init__.py  amap_tools.py  base.py  unsplash_tools.py
backend/tests/: test_config.py  test_graph.py  test_schemas.py  test_tools.py  test_trip_service.py
frontend/: index.html  package-lock.json
frontend/src/: App.vue
frontend/src/api/: trip.js
frontend/src/components/: AgentProgress.vue  MapView.vue  PlanResult.vue  TripForm.vue
frontend/src/composables/: useTripStream.js
