[project]
name = "trip-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100",
    "httpx>=0.25",
    "langchain-core>=0.3",
    "langchain-deepseek>=0.1",
    "langgraph>=0.5",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "uvicorn>=0.20",
]
